--- a/DontNetCore-MinimalApiSample-Full/DontNetCore-MinimalApiStructure.csproj
+++ b/DontNetCore-MinimalApiSample-Full/DontNetCore-MinimalApiStructure.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.3" />
     <PackageReference Include="Scalar.AspNetCore" Version="2.1.5" />
   </ItemGroup>
